--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -1,4 +1,6 @@
 /main.do=service.MainAction
+/memWriteForm.do=service.MemWriteFormAction
+/memInsert.do=service.MemInsertAction
 /autocomplete.do=service.AutocompleteAction
 /list.do=service.ListAction
 /content.do=service.ContentAction
