로그인 추가

--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -1,6 +1,7 @@
 /main.do=service.MainAction
 /memWriteForm.do=service.MemWriteFormAction
 /memInsert.do=service.MemInsertAction
+/login.do=service.LoginAction
 /autocomplete.do=service.AutocompleteAction
 /list.do=service.ListAction
 /content.do=service.ContentAction
