--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -2,6 +2,7 @@
 /memWriteForm.do=service.MemWriteFormAction
 /memInsert.do=service.MemInsertAction
 /autocomplete.do=service.AutocompleteAction
+/idChk.do=service.IdChkAction
 /list.do=service.ListAction
 /content.do=service.ContentAction
 /updateForm.do=service.UpdateFormAction
