--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -11,3 +11,4 @@
 /writePro.do=service.WriteProAction
 /deleteForm.do=service.DeleteFormAction
 /deletePro.do=service.DeleteProAction
+/reivewForm.do=service.ReviewFormAction
