추가 - 수정 : 허진우

--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -3,6 +3,8 @@
 /memInsert.do=service.MemInsertAction
 /autocomplete.do=service.AutocompleteAction
 /idChk.do=service.IdChkAction
+/login.do=service.LoginAction
+/loginForm.do=service.LoginFormAction
 /list.do=service.ListAction
 /content.do=service.ContentAction
 /updateForm.do=service.UpdateFormAction
