로그아웃 추가 및 수정 ::허진우

--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -5,6 +5,7 @@
 /idChk.do=service.IdChkAction
 /login.do=service.LoginAction
 /loginForm.do=service.LoginFormAction
+/logout.do=service.LogoutAction
 /list.do=service.ListAction
 /content.do=service.ContentAction
 /updateForm.do=service.UpdateFormAction
