# WARNING: head commit changed in the meantime
추가 및 수정 : 허진우

--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -1,6 +1,7 @@
 /main.do=service.MainAction
 /memWriteForm.do=service.MemWriteFormAction
 /memInsert.do=service.MemInsertAction
+/memChangeUpdateForm.do=service.MemChangeUpdateFormAction
 /autocomplete.do=service.AutocompleteAction
 /idChk.do=service.IdChkAction
 /login.do=service.LoginAction
