수정 및 추가 허진우

--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -1,7 +1,7 @@
 /main.do=service.MainAction
 /memWriteForm.do=service.MemWriteFormAction
 /memInsert.do=service.MemInsertAction
-/memChangeUpdateForm.do=service.MemChangeUpdateFormAction
+/memChangeUpdateAction.do=service.MemChangeUpdateAction
 /autocomplete.do=service.AutocompleteAction
 /idChk.do=service.IdChkAction
 /login.do=service.LoginAction
