--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -1,7 +1,7 @@
 /main.do=service.MainAction
-/memWriteForm.do=service.MemWriteFormAction
 /memInsert.do=service.MemInsertAction
-/memUpdatdForm.do=service.MemUpdateAction
+/memUpdate.do=service.MemUpdateFormAction
+/memUpdatePro.do=service.MemUpdateProAction
 /autocomplete.do=service.AutocompleteAction
 /idChk.do=service.IdChkAction
 /login.do=service.LoginAction
