--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -1,6 +1,6 @@
 /main.do=service.MainAction
 /memInsert.do=service.MemInsertAction
-/memUpdate.do=service.MemUpdateFormAction
+/memUpdateForm.do=service.MemUpdateFormAction
 /memUpdatePro.do=service.MemUpdateProAction
 /autocomplete.do=service.AutocompleteAction
 /idChk.do=service.IdChkAction
