--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -2,6 +2,8 @@
 /memWriteForm.do=service.MemWriteFormAction
 /memInsert.do=service.MemInsertAction
 /memUpdatdForm.do=service.MemUpdateAction
+/memMng.do=service.MemMngAction
+/memMngViewForm.do=MngViewFormAction
 /autocomplete.do=service.AutocompleteAction
 /idChk.do=service.IdChkAction
 /login.do=service.LoginAction
