--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -1,7 +1,7 @@
 /main.do=service.MainAction
 /memInsert.do=service.MemInsertAction
 /memMng.do=service.MemMngAction
-/memMngViewForm.do=MngViewFormAction
+/memMngViewForm.do=service.MemMngViewFormAction
 /memUpdateForm.do=service.MemUpdateFormAction
 /memUpdatePro.do=service.MemUpdateProAction
 /autocomplete.do=service.AutocompleteAction
