북마크 수정

--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -19,3 +19,4 @@
 /deletePro.do=service.DeleteProAction
 /reivewForm.do=service.ReviewFormAction
 /surveyList.do=service.SurveyListAction
+/bkmarkFrom.do=service.BookmarkFormAction
