--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -20,3 +20,5 @@
 /reivewForm.do=service.ReviewFormAction
 /surveyList.do=service.SurveyListAction
 /bkmarkFrom.do=service.BookmarkFormAction
+/r_list.do=service.ReviewListAction
+/reviewdeleteForm.do=service.ReviewDeleteFormAction
