--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -19,6 +19,8 @@
 /deletePro.do=service.DeleteProAction
 /reivewForm.do=service.ReviewFormAction
 /surveyList.do=service.SurveyListAction
+/surveyWrite.do=service.SurveyWriteAction
+/surveyWritePro.do=service.SurveyWriteProAction
 /bkmarkFrom.do=service.BookmarkFormAction
 /r_list.do=service.ReviewListAction
 /reviewdeleteForm.do=service.ReviewDeleteFormAction
