--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -24,3 +24,4 @@
 /bkmarkFrom.do=service.BookmarkFormAction
 /r_list.do=service.ReviewListAction
 /reviewdeleteForm.do=service.ReviewDeleteFormAction
+/reviewdeletepro.do=service.ReviewDeleteProAction
