--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -21,6 +21,7 @@
 /surveyList.do=service.SurveyListAction
 /surveyWrite.do=service.SurveyWriteAction
 /surveyWritePro.do=service.SurveyWriteProAction
-/bkmarkFrom.do=service.BookmarkFormAction
+/bkmarkForm.do=service.BookmarkFormAction
 /r_list.do=service.ReviewListAction
 /reviewdeleteForm.do=service.ReviewDeleteFormAction
+/delete.do=service.BookmarkDeleteProAction
