추가 및 수정

--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -1,9 +1,12 @@
 /main.do=service.MainAction
+/memWriteForm.do=service.MemInsertFormAction
 /memInsert.do=service.MemInsertAction
 /memMng.do=service.MemMngAction
 /memMngViewForm.do=service.MemMngViewFormAction
 /memUpdateForm.do=service.MemUpdateFormAction
 /memUpdatePro.do=service.MemUpdateProAction
+/memDeletePro.do=service.MemDeleteProAction
+/memDeleteForm.do=service.MemDeleteFormAction
 /autocomplete.do=service.AutocompleteAction
 /idChk.do=service.IdChkAction
 /login.do=service.LoginAction
