--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -25,3 +25,5 @@
 /r_list.do=service.ReviewListAction
 /reviewdeleteForm.do=service.ReviewDeleteFormAction
 /delete.do=service.BookmarkDeleteProAction
+/movieInfo.do=service.MovieInfoAction
+/movieList.do=service.MovieListAction
