--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -3,6 +3,7 @@
 /memInsert.do=service.MemInsertAction
 /memMng.do=service.MemMngAction
 /memMngViewForm.do=service.MemMngViewFormAction
+/memMngUpdatePro.do=service.MemMngUpdateProAction
 /memUpdateForm.do=service.MemUpdateFormAction
 /memUpdatePro.do=service.MemUpdateProAction
 /memDeletePro.do=service.MemDeleteProAction
