--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -31,4 +31,4 @@
 /delete.do=service.BookmarkDeleteProAction
 /movieInfo.do=service.MovieInfoAction
 /movieList.do=service.MovieListAction
-/surveyContent.do=SurveyContentAction
+/surveyContent.do=service.SurveyContentAction
