--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -32,3 +32,8 @@
 /movieInfo.do=service.MovieInfoAction
 /movieList.do=service.MovieListAction
 /surveyContent.do=service.SurveyContentAction
+/reviewdeletepro.do=service.ReviewDeleteProAction
+/reviewupdateForm.do=service.ReviewUpdateFormAction
+/reviewupdatePro.do=service.ReviewUpdateProAction
+/reviewwriteForm.do=service.ReviewWriteFormAction
+/reviewwritePro.do=service.ReviewWriterProAction
