수정 추가 허진우

--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -6,7 +6,7 @@
 /memMngUpdatePro.do=service.MemMngUpdateProAction
 /memUpdateForm.do=service.MemUpdateFormAction
 /memUpdatePro.do=service.MemUpdateProAction
-/memDeletePro.do=service.MemDeleteProAction
+/memDeletePro.do.do=service.MemDeleteProAction
 /memDeleteForm.do=service.MemDeleteFormAction
 /autocomplete.do=service.AutocompleteAction
 /idChk.do=service.IdChkAction
