--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -32,6 +32,7 @@
 /movieInfo.do=service.MovieInfoAction
 /movieList.do=service.MovieListAction
 /surveyContent.do=service.SurveyContentAction
+/surveyDelete.do=service.SurveyDeleteAction
 /reviewdeletepro.do=service.ReviewDeleteProAction
 /reviewupdateForm.do=service.ReviewUpdateFormAction
 /reviewupdatePro.do=service.ReviewUpdateProAction
