--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -38,3 +38,4 @@
 /reviewupdatePro.do=service.ReviewUpdateProAction
 /reviewwriteForm.do=service.ReviewWriteFormAction
 /reviewwritePro.do=service.ReviewWriterProAction
+/commMngList.do=service.CommMngListAction
