--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -6,8 +6,9 @@
 /memMngUpdatePro.do=service.MemMngUpdateProAction
 /memUpdateForm.do=service.MemUpdateFormAction
 /memUpdatePro.do=service.MemUpdateProAction
-/memDeletePro.do.do=service.MemDeleteProAction
+/memDeletePro.do=service.MemDeleteProAction
 /memDeleteForm.do=service.MemDeleteFormAction
+/memPageForm.do=service.MemPageFormAction
 /autocomplete.do=service.AutocompleteAction
 /idChk.do=service.IdChkAction
 /login.do=service.LoginAction
