--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -26,7 +26,7 @@
 /surveyList.do=service.SurveyListAction
 /surveyWrite.do=service.SurveyWriteAction
 /surveyWritePro.do=service.SurveyWriteProAction
-/bkmarkForm.do=service.BookmarkFormAction
+/bookMarkList.do=service.BookMarkListAction
 /r_list.do=service.ReviewListAction
 /reviewdeleteForm.do=service.ReviewDeleteFormAction
 /delete.do=service.BookmarkDeleteProAction
