--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -39,3 +39,4 @@
 /reviewwriteForm.do=service.ReviewWriteFormAction
 /reviewwritePro.do=service.ReviewWriterProAction
 /commMngList.do=service.CommMngListAction
+/surveyCommentList.do=service.SurveyCommentListAction
