--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -40,5 +40,5 @@
 /reviewwriteForm.do=service.ReviewWriteFormAction
 /reviewwritePro.do=service.ReviewWriterProAction
 /commMngList.do=service.CommMngListAction
-/surveyCommentList.do=service.SurveyCommentListActiosn
+/surveyCommentList.do=service.SurveyCommentListAction
 /surveyCommentWrite.do=service.SurveyCommentWriteAction
