--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -42,3 +42,4 @@
 /commMngList.do=service.CommMngListAction
 /surveyCommentList.do=service.SurveyCommentListAction
 /surveyCommentWrite.do=service.SurveyCommentWriteAction
+/commwritePro.do=service.CommWriteProAction
