--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -43,3 +43,5 @@
 /surveyCommentList.do=service.SurveyCommentListAction
 /surveyCommentWrite.do=service.SurveyCommentWriteAction
 /commwritePro.do=service.CommWriteProAction
+/csPro.do=service.CSProAction
+/csListForm.do=service.CSListFormAction
