--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -43,3 +43,4 @@
 /surveyCommentList.do=service.SurveyCommentListAction
 /surveyCommentWrite.do=service.SurveyCommentWriteAction
 /commwritePro.do=service.CommWriteProAction
+/surveyCommentDelete.do=service.SurveyCommentDeleteAction
