--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -46,3 +46,4 @@
 /surveyCommentDelete.do=service.SurveyCommentDeleteAction
 /csPro.do=service.CSProAction
 /csListForm.do=service.CSListFormAction
+/commdeletePro.do=service.CommDeleteProAction
