--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -43,5 +43,6 @@
 /surveyCommentList.do=service.SurveyCommentListAction
 /surveyCommentWrite.do=service.SurveyCommentWriteAction
 /commwritePro.do=service.CommWriteProAction
-/csPro.do=service.CSProAction
-/csListForm.do=service.CSListFormAction
+/csWritePro.do=service.CSWriteProAction
+/csList.do=service.CSListAction
+/csWriteForm.do=service.CSWriteFormAction
