--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -48,3 +48,6 @@
 /csList.do=service.CSListAction
 /csWriteForm.do=service.CSWriteFormAction
 /commdeletePro.do=service.CommDeleteProAction
+/csView.do=service.CSViewAction
+/csUpdateForm.do=service.CSUpdateFormAction
+/csUpdatePro.do=service.CSUpdateProAction
