추가 및 수정

--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -10,6 +10,7 @@
 /memDeleteForm.do=service.MemDeleteFormAction
 /memPageForm.do=service.MemPageFormAction
 /memExcelDown.do=service.MemExcelDownAction
+/commExcelDown.do=service.CommExcelDownAction
 /autocomplete.do=service.AutocompleteAction
 /idChk.do=service.IdChkAction
 /login.do=service.LoginAction
