--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -55,3 +55,7 @@
 /csView.do=service.CSViewAction
 /csUpdateForm.do=service.CSUpdateFormAction
 /csUpdatePro.do=service.CSUpdateProAction
+/symparthyPro.do=service.SymparthProAction
+/unsymparthyPro.do=service.UnSymparthProAction
+/commidchek.do=service.CommIdchekAction
+/commidchekunsym.do=service.CommIdchekUnsymAction
