--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -48,3 +48,9 @@
 /csList.do=service.CSListAction
 /csWriteForm.do=service.CSWriteFormAction
 /commdeletePro.do=service.CommDeleteProAction
+/movieInsertForm.do=service.MovieInsertFormAction
+/movieInsertPro.do=service.MovieInsertProAction
+/movieUpdateForm.do=service.MovieUpdateFormAction
+/movieUpdatePro.do=service.MovieUpdateProAction
+/movieDeleteForm.do=service.MovieDeleteFormAction
+/movieDeletePro.do=service.MovieDeleteProAction
