--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -61,3 +61,5 @@
 /unsymparthyPro.do=service.UnSymparthProAction
 /commidchek.do=service.CommIdchekAction
 /commidchekunsym.do=service.CommIdchekUnsymAction
+/csDeleteForm.do=service.CSDeleteFormAction
+/csDeletePro.do=service.CSDeleteProAction
