--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -47,6 +47,7 @@
 /csDeletePro.do=service.CSDeleteProAction
 /surveyCommentWrite.do=service.SurveyCommentWriteAction
 /commwritePro.do=service.CommWriteProAction
+/scommWritePro.do=service.ScommWriteProAction
 /surveyCommentDelete.do=service.SurveyCommentDeleteAction
 /csWritePro.do=service.CSWriteProAction
 /csList.do=service.CSListAction
