--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -42,7 +42,7 @@
 /commMngList.do=service.CommMngListAction
 /surveyCommentList.do=service.SurveyCommentListAction
 /surveyCommentWrite.do=service.SurveyCommentWriteAction
-/commwritePro.do=service.CommWriteProAction
+/commWritePro.do=service.CommWriteProAction
 /scommWritePro.do=service.ScommWriteProAction
 /surveyCommentDelete.do=service.SurveyCommentDeleteAction
 /csWritePro.do=service.CSWriteProAction
