--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -9,6 +9,9 @@
 /memDeletePro.do=service.MemDeleteProAction
 /memDeleteForm.do=service.MemDeleteFormAction
 /memPageForm.do=service.MemPageFormAction
+/memExcelDown.do=service.MemExcelDownAction
+/adminPageForm.do=service.AdminPageFormAction
+/commExcelDown.do=service.CommExcelDownAction
 /autocomplete.do=service.AutocompleteAction
 /idChk.do=service.IdChkAction
 /login.do=service.LoginAction
@@ -42,7 +45,7 @@
 /commMngList.do=service.CommMngListAction
 /surveyCommentList.do=service.SurveyCommentListAction
 /surveyCommentWrite.do=service.SurveyCommentWriteAction
-/commwritePro.do=service.CommWriteProAction
+/commWritePro.do=service.CommWriteProAction
 /scommWritePro.do=service.ScommWriteProAction
 /surveyCommentDelete.do=service.SurveyCommentDeleteAction
 /csWritePro.do=service.CSWriteProAction
