--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -67,3 +67,4 @@
 /commidchekunsym.do=service.CommIdchekUnsymAction
 /csDeleteForm.do=service.CSDeleteFormAction
 /csDeletePro.do=service.CSDeleteProAction
+/csExcelDown.do=service.CSExcelDownAction
