--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -69,3 +69,4 @@
 /csDeletePro.do=service.CSDeleteProAction
 /csExcelDown.do=service.CSExcelDownAction
 /location.do=service.LocationAction
+/bookExcelDown.do=service.BookExcelDownAction
