--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -56,6 +56,7 @@
 /movieInsertPro.do=service.MovieInsertProAction
 /movieUpdateForm.do=service.MovieUpdateFormAction
 /movieUpdatePro.do=service.MovieUpdateProAction
+/movieDelete.do=service.MovieDeleteAction
 /movieDeleteForm.do=service.MovieDeleteFormAction
 /movieDeletePro.do=service.MovieDeleteProAction
 /csView.do=service.CSViewAction
