--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -72,3 +72,4 @@
 /location.do=service.LocationAction
 /bookExcelDown.do=service.BookExcelDownAction
 /scommdeletePro.do=service.ScommDeleteProAction
+/miniGame.do=service.MiniGameAction
