--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -73,3 +73,4 @@
 /bookExcelDown.do=service.BookExcelDownAction
 /scommdeletePro.do=service.ScommDeleteProAction
 /miniGame.do=service.MiniGameAction
+/bookMarkInsert.do=service.BookMarkInsertAction
