--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -73,4 +73,6 @@
 /bookExcelDown.do=service.BookExcelDownAction
 /scommdeletePro.do=service.ScommDeleteProAction
 /miniGame.do=service.MiniGameAction
+/miniHard.do=service.MiniGameHardAction
+/miniEasy.do=service.MiniGameEasyAction
 /bookMarkInsert.do=service.BookMarkInsertAction
