--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -76,3 +76,4 @@
 /miniHard.do=service.MiniGameHardAction
 /miniEasy.do=service.MiniGameEasyAction
 /bookMarkInsert.do=service.BookMarkInsertAction
+/breakWall.do=service.BreakWallAction
