--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -77,3 +77,5 @@
 /miniEasy.do=service.MiniGameEasyAction
 /bookMarkInsert.do=service.BookMarkInsertAction
 /breakWall.do=service.BreakWallAction
+/findId.do=service.FindIdAction
+/findPw.do=service.FindPwAction
