설문조사 수정 기능 추가

--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -77,5 +77,5 @@
 /miniEasy.do=service.MiniGameEasyAction
 /bookMarkInsert.do=service.BookMarkInsertAction
 /breakWall.do=service.BreakWallAction
-/findId.do=service.FindIdAction
-/findPw.do=service.FindPwAction
+/surveyModify.do=service.SurveyModifyAction
+/surveyModifyPro.do=service.SurveyModifyProAction
