비밀번호 수정 추가

--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -79,3 +79,7 @@
 /breakWall.do=service.BreakWallAction
 /surveyModify.do=service.SurveyModifyAction
 /surveyModifyPro.do=service.SurveyModifyProAction
+/findId.do=service.FindIdAction
+/findPw.do=service.FindPwAction
+/searchId.do=service.SearchIdAction
+/searchPW.do=service.SearchPwAction
