--- a/ch16/WebContent/WEB-INF/command.properties
+++ b/ch16/WebContent/WEB-INF/command.properties
@@ -83,3 +83,4 @@
 /findPw.do=service.FindPwAction
 /searchId.do=service.SearchIdAction
 /searchPW.do=service.SearchPwAction
+/duderg.do=service.DudergAction
